Begin styling of client   * Landing page now includes:     - Background image with styling (cover, no repeat, etc.)     - Corrected missing div with container class       + Removes the horizontal scrollbar     - Border with background and opacity for forms and masthead     - Moved sign-up/sign-in buttons within masthead       + Not final decision, commented out previous button code for now To Do   * Need to fix:     - Spacing of masthead sign-in/sign-up buttons in phone view     - Positioning of submit buttons in sign-in/sign-up forms   * Need to decide if I want to keep landing page menu     - Cancel buttons might be better?

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,18 +1,30 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+@import url('https://fonts.googleapis.com/css?family=Gugi|Lato:900');
 
 .app-title {
-  // background: gray;
-  // border-style: solid;
-  // color: white;
+  background: rgba(0, 0, 0, 0.55);
+  border-color: yellow;
+  border-radius: 40px;
+  border-style: solid;
+  color: white;
+  font-family: 'Gugi', cursive;
   text-align: center;
 }
 
-// body {
-//   background: url('https://imgur.com/45uXhpz.jpg') no-repeat center center fixed;
-//   background-size: cover;
-//   height: 100vh;
-//   padding-top: 50px;
-//   text-align: center;
-//   width: 100vw;
-// }
+body {
+  background: url('../img/bg-unsplash-sushi.jpg') no-repeat center center fixed;
+  background-size: cover;
+  // color: white;
+  // font-family: 'Lato', sans-serif;
+  text-align: center;
+}
+
+.p {
+  // font-size: 24px;
+}
+
+.row {
+  margin: auto;
+  margin-bottom: 20px;
+}
